--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   },
   "dependencies": {
     "express": "3.0.0rc5",
-    "jade": "*",
-    "mongoose": "3.5.2"
+    "jade": "*"
   },
   "engines": {
     "node": "0.8.14",
