--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "express": "3.1.0",
     "jade": "0.28.1",
     "mongoose": "3.5.6",
-    "node-sass": "0.3.0"
+    "node-sass": "0.3.0",
+    "grunt-clean": "*"
   },
   "engines": {
     "node": "0.8.14",
     "npm": "1.1.65"
+  },
+  "scripts": {
+    "test": "grunt travis --verbose"
   }
 }
