--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jade": "0.28.1",
     "mongoose": "3.5.6",
     "node-sass": "0.3.0",
+    "grunt": "0.3.17",
     "grunt-clean": "*"
   },
   "engines": {
