--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "jade": "0.28.1",
     "mongoose": "3.5.6",
     "node-sass": "0.3.0",
-    "grunt": "0.3.17",
-    "grunt-clean": "*"
+    "grunt": "0.4.0",
+    "grunt-contrib-clean": "*"
   },
   "engines": {
     "node": "0.8.14",
