--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   },
   "dependencies": {
     "express": "3.1.0",
-    "jade": "0.28.1",
+    "jade": "*",
     "mongoose": "3.5.6",
     "grunt": "0.4.0",
-    "grunt-contrib-clean": "*"
+    "grunt-contrib-clean": "*",
+    "markdown": "0.4.0"
   },
   "engines": {
     "node": "0.8.14",
