--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node app"
   },
   "dependencies": {
+    "cookie-signature": "~0.0.1",
     "express": "3.1.0",
     "jade": "*",
     "mongoose": "3.5.6",
