--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "grunt travis --verbose"
   },
   "dependencies": {
+    "buffer-crc32": "*",
     "cookie-signature": "*",
     "express": "3.1.0",
     "jade": "*",
