--- a/package.json
+++ b/package.json
@@ -1,21 +1,12 @@
 {
-  "name": "application-name",
+  "name": "WeBuild.sg",
   "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "start": "node app",
-    "test": "grunt travis --verbose"
-  },
-  "dependencies": {
-    "buffer-crc32": "*",
-    "cookie-signature": "*",
-    "express": "3.1.0",
-    "jade": "*",
-    "mongoose": "3.5.6",
-    "grunt": "0.4.0",
-    "grunt-contrib-clean": "*",
-    "markdown": "0.4.0"
-  },
+  "dependencies": [
+		"punch",
+		"punch-sass-compiler",
+		"punch-engine-jade"
+  ],
   "engines": {
     "node": "0.8.14",
     "npm": "1.1.65"
