--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "buffer-crc32": "*",
     "cookie-signature": "*",
     "express": "3.2.5",
-    "jade": "*",
+    "github": "^0.2.1",
     "grunt": "0.4.1",
     "grunt-contrib-clean": "*",
-    "markdown": "0.4.0"
+    "jade": "*",
+    "jsonfile": "^1.2.0",
+    "later": "^1.1.6",
+    "markdown": "0.4.0",
+    "mess": "^0.1.2",
+    "promise": "^5.0.0"
   },
   "engines": {
     "node": "0.8.14",
