grunt task now build sass to css

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "buffer-crc32": "*",
     "cookie-signature": "*",
     "express": "3.2.5",
-    "github": "^0.2.1",
+    "github": "0.2.1",
     "grunt": "0.4.1",
     "grunt-contrib-clean": "*",
+    "grunt-shell": "0.7.0",
     "jade": "*",
     "jsonfile": "^1.2.0",
     "markdown": "0.4.0",
