--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "private": true,
   "scripts": {
     "start": "node app",
-    "test": "grunt travis --verbose"
+    "test": "grunt --verbose && node app"
   },
   "dependencies": {
-    "buffer-crc32": "*",
-    "cookie-signature": "*",
+    "buffer-crc32": "0.2.3",
+    "cookie-signature": "1.0.4",
     "express": "3.2.5",
     "github": "0.2.1",
     "grunt": "0.4.1",
-    "grunt-contrib-clean": "*",
+    "grunt-contrib-clean": "0.5.0",
     "grunt-shell": "0.7.0",
-    "jade": "*",
-    "jsonfile": "^1.2.0",
+    "grunt-contrib-uglify": "0.5.0",
+    "jade": "1.3.1",
+    "jsonfile": "1.2.0",
     "markdown": "0.4.0",
-    "mess": "^0.1.2",
-    "moment": "^2.7.0",
-    "promise": "^5.0.0",
-    "request": "^2.37.0"
+    "mess": "0.1.2",
+    "moment": "2.7.0",
+    "promise": "5.0.0",
+    "request": "2.37.0"
   },
   "engines": {
     "node": "0.10"
