--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "github": "0.2.1",
     "grunt": "0.4.1",
     "grunt-contrib-clean": "0.5.0",
-    "grunt-shell": "0.7.0",
+    "grunt-contrib-sass": "0.7.3",
     "grunt-contrib-uglify": "0.5.0",
     "jade": "1.3.1",
     "jsonfile": "1.2.0",
