--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node app",
-    "test": "grunt travis --verbose"
+    "test": "grunt --verbose"
   },
   "dependencies": {
     "buffer-crc32": "0.2.3",
