--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "cookie-signature": "1.0.4",
     "errorhandler": "1.1.1",
     "express": "4.6.1",
-    "express-session": "^1.6.5",
     "github": "0.2.1",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.5.0",
@@ -24,14 +23,12 @@
     "jsonfile": "1.2.0",
     "markdown": "0.5.0",
     "mess": "0.1.2",
-    "method-override": "2.1.1",
     "moment": "2.7.0",
     "passport": "0.2.0",
     "passport-auth0": "0.2.0",
     "promise": "5.0.0",
     "request": "2.37.0",
-    "serve-favicon": "2.0.1",
-    "superagent": "0.18.2"
+    "serve-favicon": "2.0.1"
   },
   "engines": {
     "node": "0.10"
