--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "grunt-contrib-clean": "0.5.0",
     "grunt-contrib-sass": "0.7.3",
     "grunt-contrib-uglify": "0.5.0",
-    "jade": "1.4.1",
+    "htmlstrip-native": "0.0.2",
+    "ical-generator": "0.1.6",
+    "jade": "1.4.2",
     "jsonfile": "1.2.0",
     "markdown": "0.5.0",
     "mess": "0.1.2",
