--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-contrib-clean": "0.5.0",
     "grunt-contrib-sass": "0.7.3",
     "grunt-contrib-uglify": "0.5.0",
+    "grunt-contrib-jshint": "0.7.2",
     "htmlstrip-native": "0.0.2",
     "ical-generator": "0.1.6",
     "jade": "1.4.2",
