--- a/.jshintrc
+++ b/.jshintrc
@@ -13,7 +13,7 @@
   "noarg": true,
   "noempty": true,
   "nonew": true,
-  "plusplus": true,
+  "plusplus": false,
   "quotmark": "single",
   "undef": true,
   "unused": true,
@@ -34,6 +34,7 @@
     "moment": true,
     "process": true,
     "require": true,
+    "resolve": true,
     "setInterval": true,
     "window": true,
     "XMLHttpRequest": true
