--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "grunt travis --verbose"
   },
   "dependencies": {
-    "body-parser": "1.4.3",
+    "body-parser": "1.5.0",
     "buffer-crc32": "0.2.3",
-    "compression": "1.0.8",
+    "compression": "1.0.9",
     "cookie-parser": "1.3.2",
     "cookie-signature": "1.0.4",
     "errorhandler": "1.1.1",
@@ -17,9 +17,10 @@
     "github": "0.2.1",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.5.0",
+    "grunt-contrib-csslint": "0.2.0",
     "grunt-contrib-sass": "0.7.3",
     "grunt-contrib-uglify": "0.5.0",
-    "grunt-contrib-jshint": "0.7.2",
+    "grunt-contrib-jshint": "0.10.0",
     "htmlstrip-native": "0.0.2",
     "ical-generator": "0.1.6",
     "jade": "1.4.2",
