--- a/.jshintrc
+++ b/.jshintrc
@@ -24,6 +24,7 @@
   "maxstatements": false,
   "maxcomplexity": false,
   "maxlen": false,
+  "node": true,
 
   "globals": {
     "__dirname": true,
