--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt-contrib-csslint": "0.2.0",
     "grunt-contrib-sass": "0.7.3",
     "grunt-contrib-uglify": "0.5.0",
+    "grunt-jscs": "0.6.1",
     "grunt-contrib-jshint": "0.10.0",
     "htmlstrip-native": "0.0.2",
     "ical-generator": "0.1.7",
