events folder is done with jscs. #37

--- a/.jscsrc
+++ b/.jscsrc
@@ -1,5 +1,8 @@
 {
   "preset": "jquery",
   "requireCamelCaseOrUpperCaseIdentifiers": "ignoreProperties",
-  "validateQuoteMarks": "'"
+  "validateQuoteMarks": "'",
+  "maximumLineLength": {
+    "value": 1000
+  }
 }
