--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "private": true,
   "scripts": {
     "start": "node app",
-    "test": "grunt travis --verbose"
+    "test": "grunt travis --verbose",
+    "postinstall": "bower install && grunt build"
   },
   "dependencies": {
     "body-parser": "1.5.0",
+    "bower": "1.3.8",
     "buffer-crc32": "0.2.3",
     "compression": "1.0.9",
     "cookie-parser": "1.3.2",
@@ -18,6 +20,7 @@
     "express": "4.6.1",
     "github": "0.2.1",
     "grunt": "0.4.5",
+    "grunt-cli": "0.1.13",
     "grunt-contrib-clean": "0.5.0",
     "grunt-contrib-csslint": "0.2.0",
     "grunt-contrib-sass": "0.7.3",
