--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "markdown": "0.5.0",
     "mess": "0.1.2",
     "moment": "2.7.0",
+    "newrelic": "1.9.1",
     "passport": "0.2.0",
     "passport-auth0": "0.2.0",
     "promise": "5.0.0",
