Use prequest module from npm

--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "grunt-cli": "0.1.13",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-csslint": "0.2.0",
+    "grunt-contrib-jshint": "0.10.0",
     "grunt-contrib-sass": "0.7.4",
     "grunt-contrib-uglify": "0.5.1",
     "grunt-jscs": "0.6.2",
-    "grunt-contrib-jshint": "0.10.0",
     "htmlstrip-native": "0.0.2",
     "ical-generator": "0.1.7",
     "jade": "1.5.0",
@@ -38,6 +38,7 @@
     "newrelic": "1.10.0",
     "passport": "0.2.0",
     "passport-auth0": "0.2.0",
+    "prequest": "0.0.2",
     "promise": "5.0.0",
     "request": "2.40.0",
     "serve-favicon": "2.1.1"
