added engineers.sg youtube playlist. fixed #82

--- a/.jshintrc
+++ b/.jshintrc
@@ -33,6 +33,7 @@
     "console": true,
     "document": true,
     "exports": true,
+    "fluidvids": true,
     "module": true,
     "moment": true,
     "process": true,
