--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "body-parser": "1.9.0",
-    "bower": "1.3.12",
     "buffer-crc32": "0.2.3",
     "compression": "1.1.0",
     "cookie-parser": "1.3.3",
@@ -19,15 +18,6 @@
     "errorhandler": "1.2.0",
     "express": "4.9.5",
     "github": "0.2.2",
-    "grunt": "0.4.5",
-    "grunt-bump": "0.0.16",
-    "grunt-cli": "0.1.13",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-csslint": "0.3.1",
-    "grunt-contrib-jshint": "0.10.0",
-    "grunt-contrib-sass": "0.8.1",
-    "grunt-contrib-uglify": "0.6.0",
-    "grunt-jscs": "0.7.1",
     "htmlstrip-native": "0.0.2",
     "ical-generator": "0.1.7",
     "jade": "1.7.0",
@@ -42,6 +32,18 @@
     "promise": "6.0.0",
     "request": "2.45.0",
     "serve-favicon": "2.1.5"
+  },
+  "devDependencies": {
+    "bower": "1.3.12",
+    "grunt": "0.4.5",
+    "grunt-bump": "0.0.16",
+    "grunt-cli": "0.1.13",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-csslint": "0.3.1",
+    "grunt-contrib-jshint": "0.10.0",
+    "grunt-contrib-sass": "0.8.1",
+    "grunt-contrib-uglify": "0.6.0",
+    "grunt-jscs": "0.7.1"
   },
   "engines": {
     "node": "0.10"
