--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "start": "node app",
-    "test": "grunt travis --verbose",
+    "test": "grunt travis --verbose && mocha test --recursive",
     "postinstall": "bower install && grunt build"
   },
   "dependencies": {
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "bower": "1.3.12",
+    "chai": "1.9.2",
     "grunt": "0.4.5",
     "grunt-bump": "0.0.16",
     "grunt-cli": "0.1.13",
