--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "grunt-contrib-jshint": "0.10.0",
     "grunt-contrib-sass": "0.8.1",
     "grunt-contrib-uglify": "0.6.0",
-    "grunt-jscs": "0.8.0"
+    "grunt-jscs": "0.8.0",
+    "mocha": "1.21.5"
   },
   "engines": {
     "node": "0.10"
