--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "jsonfile": "2.0.0",
     "markdown": "0.5.0",
     "mess": "0.1.2",
-    "moment": "2.8.3",
+    "moment-timezone": "0.2.3",
     "newrelic": "1.12.1",
     "passport": "0.2.1",
     "passport-auth0": "0.2.0",
