--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   ],
   "dependencies": {
     "fluidvids": "latest",
-    "moment": "2.8.3"
+    "moment": "2.8.3",
+    "auth0-widget.js": "5.2.11"
   }
 }
