--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "blanket": "1.1.6",
     "bower": "1.3.12",
     "chai": "1.9.2",
-    "coveralls": "2.11.2",
+    "coveralls": "^2.11.2",
     "grunt": "0.4.5",
     "grunt-bump": "0.0.16",
     "grunt-cli": "0.1.13",
@@ -47,7 +47,8 @@
     "grunt-contrib-sass": "0.8.1",
     "grunt-contrib-uglify": "0.6.0",
     "grunt-jscs": "0.8.1",
-    "mocha": "2.0.1"
+    "mocha": "2.0.1",
+    "mocha-lcov-reporter": "0.0.1"
   },
   "engines": {
     "node": "0.10"
