--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_script:
   - npm install -g grunt-cli
   - npm install -g bower
   - bower install
-after_script: NODE_ENV=test YOURPACKAGE_COVERAGE=1 mocha test --require blanket --reporter mocha-lcov-reporter | ./node_modules/coveralls/bin/coveralls.js
+after_script: NODE_ENV=test YOURPACKAGE_COVERAGE=1 mocha test --require blanket --reporter mocha-lcov-reporter --recursive | ./node_modules/coveralls/bin/coveralls.js
