--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "start": "node app",
-    "test": "grunt travis --verbose && mocha test --recursive && mocha test --require blanket --reporter html-cov --recursive > coverage.html",
+    "test": "grunt travis --verbose && mocha test --recursive && mocha test --recursive --require blanket --reporter html-cov > coverage.html",
     "postinstall": "bower install && grunt build"
   },
   "dependencies": {
@@ -37,7 +37,7 @@
     "blanket": "1.1.6",
     "bower": "1.3.12",
     "chai": "1.9.2",
-    "coveralls": "^2.11.2",
+    "coveralls": "2.11.2",
     "grunt": "0.4.5",
     "grunt-bump": "0.0.16",
     "grunt-cli": "0.1.13",
