--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "markdown": "0.5.0",
     "mess": "0.1.2",
     "moment-timezone": "0.2.4",
-    "newrelic": "1.13.0",
+    "newrelic": "1.13.2",
     "passport": "0.2.1",
     "passport-auth0": "0.2.0",
     "prequest": "0.0.2",
     "promise": "6.0.1",
     "request": "2.47.0",
     "serve-favicon": "2.1.6",
-    "word-overlap": "^2.2.1"
+    "word-overlap": "2.2.2"
   },
   "devDependencies": {
     "blanket": "1.1.6",
