--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-csslint": "0.3.1",
     "grunt-contrib-jshint": "0.10.0",
-    "grunt-contrib-sass": "0.8.1",
+    "grunt-contrib-stylus": "0.20.0",
     "grunt-contrib-uglify": "0.6.0",
     "grunt-jscs": "0.8.1",
     "mocha": "2.0.1",
