--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ node_js:
 before_install:
   - npm install -g stylus
 before_script:
-  - npm install -g grunt-cli grunt-contrib-stylus bower
+  - npm install -g grunt-cli bower
   - bower install
 after_script: NODE_ENV=test YOURPACKAGE_COVERAGE=1 mocha test --require blanket --reporter mocha-lcov-reporter --recursive | ./node_modules/coveralls/bin/coveralls.js
