--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "grunt-contrib-uglify": "0.6.0",
     "grunt-jscs": "0.8.1",
     "mocha": "2.0.1",
-    "mocha-lcov-reporter": "0.0.1",
-    "stylus": "0.49.3"
+    "mocha-lcov-reporter": "0.0.1"
   },
   "engines": {
     "node": "0.10"
