--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "request": "2.47.0",
     "serve-favicon": "2.1.6",
     "word-overlap": "2.2.2",
+    "bower": "1.3.12",
     "grunt-cli": "0.1.13",
     "grunt-contrib-uglify": "0.6.0",
     "grunt-contrib-stylus": "0.20.0"
