--- a/bower.json
+++ b/bower.json
@@ -9,8 +9,8 @@
     "bower_components"
   ],
   "dependencies": {
-    "fluidvids": "latest",
-    "moment": "2.8.3",
-    "auth0-widget.js": "5.2.11"
+    "fluidvids": "2.4.1",
+    "moment": "2.8.4",
+    "auth0-widget.js": "5.2.13"
   }
 }
