--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
   },
   "dependencies": {
     "body-parser": "1.10.0",
-    "buffer-crc32": "0.2.3",
+    "buffer-crc32": "0.2.5",
     "compression": "1.2.2",
     "cookie-parser": "1.3.3",
     "cookie-signature": "1.0.5",
     "errorhandler": "1.3.0",
     "express": "4.10.6",
     "github": "0.2.3",
-    "htmlstrip-native": "0.0.4",
-    "ical-generator": "0.1.9",
-    "jade": "1.8.1",
+    "htmlstrip-native": "0.0.6",
+    "ical-generator": "0.1.10",
+    "jade": "1.8.2",
     "jsonfile": "2.0.0",
     "markdown": "0.5.0",
     "mess": "0.1.2",
     "moment-timezone": "0.2.5",
-    "newrelic": "1.14.0",
+    "newrelic": "1.14.4",
     "passport": "0.2.1",
     "passport-auth0": "0.2.0",
     "prequest": "0.0.2",
     "promise": "6.0.1",
     "request": "2.51.0",
-    "serve-favicon": "2.1.7",
+    "serve-favicon": "2.2.0",
     "word-overlap": "2.2.2",
     "bower": "1.3.12",
     "grunt-cli": "0.1.13",
@@ -49,12 +49,12 @@
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-csslint": "0.3.1",
     "grunt-contrib-jshint": "0.10.0",
-    "grunt-contrib-stylus": "0.18.0",
+    "grunt-contrib-stylus": "0.20.0",
     "grunt-contrib-uglify": "0.6.0",
-    "grunt-jscs": "1.0.0",
-    "mocha": "2.0.1",
+    "grunt-jscs": "1.1.0",
+    "mocha": "2.1.0",
     "mocha-lcov-reporter": "0.0.1",
-    "nconf": "^0.6.9"
+    "nconf": "0.7.1"
   },
   "engines": {
     "node": "0.10"
