feature: create a git commit to store the api endpoint responses to archives

--- a/.env-example
+++ b/.env-example
@@ -8,4 +8,4 @@ GITHUB_CLIENT_ID=secret
 GITHUB_CLIENT_SECRET=secret
 EVENTBRITE_TOKEN=secret
 NODE_ENV=staging
-BOT_TOKEN=secret
+BOT_TOKEN=secret_generated_from_github_setting_application_token
