--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "cookie-signature": "1.0.5",
     "errorhandler": "1.3.0",
     "express": "4.10.6",
+    "get-urls": "3.0.0",
     "github": "0.2.3",
     "grunt-cli": "0.1.13",
     "grunt-contrib-stylus": "0.20.0",
     "grunt-contrib-uglify": "0.6.0",
     "htmlstrip-native": "0.0.6",
+    "ical": "0.3.1",
     "ical-generator": "0.1.10",
     "jade": "1.8.2",
     "jsonfile": "2.0.0",
@@ -62,6 +64,7 @@
   "config": {
     "blanket": {
       "pattern": [
+        "archives/index.js",
         "countdown/index.js",
         "events/eventbriteEvents.js",
         "events/facebookEvents.js",
