--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "1.10.0",
     "bower": "1.3.12",
     "buffer-crc32": "0.2.5",
+    "cli-color": "0.3.2",
     "compression": "1.2.2",
     "cookie-parser": "1.3.3",
     "cookie-signature": "1.0.5",
