--- a/.jshintrc
+++ b/.jshintrc
@@ -30,10 +30,13 @@
   "globals": {
     "__dirname": true,
     "app": true,
+    "beforeEach": true,
     "console": true,
+    "describe": true,
     "document": true,
     "exports": true,
     "fluidvids": true,
+    "it": true,
     "module": true,
     "moment": true,
     "process": true,
@@ -51,7 +54,7 @@
   "eqnull": false,
   "esnext": false,
   "evil": false,
-  "expr": false,
+  "expr": true,
   "funcscope": false,
   "globalstrict": false,
   "iterator": false,
