--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "grunt-cli": "0.1.13",
     "grunt-contrib-stylus": "0.20.0",
     "grunt-contrib-uglify": "0.8.0",
-    "htmlstrip-native": "0.0.6",
+    "htmlstrip-native": "git://github.com/zaro/node-htmlstrip-native#master",
     "ical": "0.3.1",
     "ical-generator": "0.1.10",
     "is-number": "1.1.0",
