--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "grunt-contrib-jshint": "0.11.0",
     "grunt-contrib-stylus": "0.20.0",
     "grunt-contrib-uglify": "0.8.0",
+    "grunt-jsbeautifier": "^0.2.10",
     "grunt-jscs": "1.5.0",
     "mocha": "2.1.0",
     "mocha-lcov-reporter": "0.0.2",
