--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     "bower": "1.3.12",
     "buffer-crc32": "0.2.5",
     "cli-color": "0.3.2",
-    "compression": "1.4.1",
+    "compression": "1.4.2",
     "cookie-signature": "1.0.6",
     "errorhandler": "1.3.4",
-    "express": "4.12.1",
+    "express": "4.12.2",
     "get-urls": "4.0.1",
     "github": "0.2.3",
     "grunt-cli": "0.1.13",
     "grunt-contrib-stylus": "0.20.0",
     "grunt-contrib-uglify": "0.8.0",
-    "htmlstrip-native": "0.1.0",
+    "htmlstrip-native": "0.1.1",
     "ical": "0.3.1",
     "ical-generator": "0.2.0",
-    "is-number": "1.1.0",
+    "is-number": "1.1.2",
     "jade": "1.9.2",
     "jsonfile": "2.0.0",
     "markdown": "0.5.0",
     "mess": "0.1.2",
     "moment-timezone": "0.3.0",
-    "newrelic": "1.17.0",
+    "newrelic": "1.17.2",
     "passport": "0.2.1",
     "passport-auth0": "0.2.1",
     "prequest": "0.0.3",
@@ -44,7 +44,7 @@
   "devDependencies": {
     "blanket": "1.1.6",
     "bower": "1.3.12",
-    "chai": "2.1.0",
+    "chai": "2.1.1",
     "coveralls": "2.11.2",
     "grunt": "0.4.5",
     "grunt-bump": "0.3.0",
@@ -52,11 +52,11 @@
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-csslint": "0.4.0",
     "grunt-contrib-jshint": "0.11.0",
-    "grunt-contrib-stylus": "0.20.0",
+    "grunt-contrib-stylus": "0.21.0",
     "grunt-contrib-uglify": "0.8.0",
-    "grunt-jsbeautifier": "^0.2.10",
+    "grunt-jsbeautifier": "0.2.10",
     "grunt-jscs": "1.5.0",
-    "mocha": "2.1.0",
+    "mocha": "2.2.1",
     "mocha-lcov-reporter": "0.0.2",
     "nconf": "0.7.1"
   },
