--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,7 @@ before_script:
   - npm install -g grunt-cli bower
   - bower install
 after_script: NODE_ENV=test YOURPACKAGE_COVERAGE=1 mocha test --require blanket --reporter mocha-lcov-reporter --recursive | ./node_modules/coveralls/bin/coveralls.js
+deploy:
+  provider: heroku
+  api_key: "YOUR API KEY"
+  app: webuildsg-dev
