--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cli-color": "1.0.0",
     "compression": "1.4.4",
     "cookie-signature": "1.0.6",
+    "cors": "^2.7.1",
     "errorhandler": "1.3.6",
     "express": "4.12.4",
     "get-urls": "4.0.1",
