--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "grunt-jsbeautifier": "0.2.10",
     "htmlstrip-native": "0.1.1",
     "ical": "0.4.0",
-    "ical-generator": "notthetup/ical-generator",
+    "ical-generator": "0.2.1",
     "is-number": "2.0.2",
     "jade": "1.9.2",
     "jsonfile": "2.0.0",
@@ -65,7 +65,7 @@
     "nconf": "0.7.1"
   },
   "engines": {
-    "iojs": "1.0.x"
+    "iojs": "2.2.x"
   },
   "config": {
     "blanket": {
