--- a/.env-example
+++ b/.env-example
@@ -7,5 +7,11 @@ MAX_REPOS=50
 GITHUB_CLIENT_ID=secret
 GITHUB_CLIENT_SECRET=secret
 EVENTBRITE_TOKEN=secret
+NEW_RELIC_APP_NAME=webuildsg
+NEW_RELIC_LOG=stdout
+WEBUILD_AUTH0_CLIENT_ID=secret
+WEBUILD_AUTH0_CLIENT_SECRET=secret
+NEW_RELIC_APDEX=0.010
+NEW_RELIC_LICENSE_KEY=secret
 NODE_ENV=staging
-BOT_TOKEN=secret_generated_from_github_setting_application_token
+BOT_TOKEN=secret
