:arrow_up: upgrade dependancies

--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "routine": "grunt cleanup && npm outdated && bower list && npm-check-updates -u && npm i && grunt && npm test && npm outdated"
   },
   "dependencies": {
-    "body-parser": "1.13.2",
+    "body-parser": "1.13.3",
     "bower": "1.4.1",
     "buffer-crc32": "0.2.5",
     "cli-color": "1.0.0",
-    "compression": "1.5.1",
+    "compression": "1.5.2",
     "cookie-signature": "1.0.6",
-    "cors": "^2.7.1",
-    "errorhandler": "1.4.1",
-    "express": "4.13.1",
+    "cors": "2.7.1",
+    "errorhandler": "1.4.2",
+    "express": "4.13.3",
     "get-urls": "5.0.0",
     "github": "0.2.4",
     "grunt-cli": "0.1.13",
@@ -27,7 +27,7 @@
     "grunt-contrib-uglify": "0.9.1",
     "grunt-jsbeautifier": "0.2.10",
     "ical": "0.4.0",
-    "ical-generator": "notthetup/ical-generator",
+    "ical-generator": "0.2.2",
     "is-number": "2.0.2",
     "jade": "1.11.0",
     "jsonfile": "2.2.1",
@@ -35,33 +35,33 @@
     "mess": "0.1.2",
     "moment-timezone": "0.4.0",
     "passport": "0.2.2",
-    "passport-auth0": "0.2.2",
+    "passport-auth0": "0.3.0",
     "prequest": "0.0.3",
-    "promise": "7.0.3",
-    "request": "2.58.0",
+    "promise": "7.0.4",
+    "request": "2.60.0",
     "serve-favicon": "2.3.0",
-    "sitemap": "0.9.0",
+    "sitemap": "1.0.0",
     "striptags": "2.0.2",
     "word-overlap": "2.4.0"
   },
   "devDependencies": {
     "blanket": "1.1.7",
     "bower": "1.4.1",
-    "chai": "3.0.0",
-    "coveralls": "2.11.2",
+    "chai": "3.2.0",
+    "coveralls": "2.11.3",
     "grunt": "0.4.5",
     "grunt-bump": "0.3.1",
     "grunt-cli": "0.1.13",
     "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-csslint": "0.4.0",
+    "grunt-contrib-csslint": "0.5.0",
     "grunt-contrib-jshint": "0.11.2",
-    "grunt-contrib-stylus": "0.21.0",
+    "grunt-contrib-stylus": "0.22.0",
     "grunt-contrib-uglify": "0.9.1",
     "grunt-jsbeautifier": "0.2.10",
-    "grunt-jscs": "1.8.0",
+    "grunt-jscs": "2.0.0",
     "mocha": "2.2.5",
     "mocha-lcov-reporter": "0.0.2",
-    "nconf": "0.7.1"
+    "nconf": "0.7.2"
   },
   "engines": {
     "iojs": "2.2.x"
