--- a/package.json
+++ b/package.json
@@ -12,54 +12,44 @@
   },
   "dependencies": {
     "body-parser": "1.13.3",
-    "bower": "1.4.1",
-    "buffer-crc32": "0.2.5",
+    "bower": "1.5.2",
     "cli-color": "1.0.0",
     "compression": "1.5.2",
-    "cookie-signature": "1.0.6",
     "cors": "2.7.1",
     "errorhandler": "1.4.2",
     "express": "4.13.3",
-    "get-urls": "5.0.0",
-    "github": "0.2.4",
     "grunt-cli": "0.1.13",
     "grunt-contrib-stylus": "0.22.0",
-    "grunt-contrib-uglify": "0.9.1",
+    "grunt-contrib-uglify": "0.9.2",
     "grunt-jsbeautifier": "0.2.10",
     "ical": "0.4.0",
-    "ical-generator": "0.2.2",
-    "is-number": "2.0.2",
+    "ical-generator": "0.2.4-dev",
     "jade": "1.11.0",
     "jsonfile": "2.2.1",
-    "markdown": "0.5.0",
-    "mess": "0.1.2",
     "moment-timezone": "0.4.0",
-    "passport": "0.2.2",
-    "passport-auth0": "0.3.0",
-    "prequest": "0.0.3",
     "promise": "7.0.4",
-    "request": "2.60.0",
+    "request": "2.61.0",
     "serve-favicon": "2.3.0",
-    "sitemap": "1.0.0",
-    "striptags": "2.0.2",
-    "word-overlap": "2.4.0"
+    "sitemap": "1.1.0",
+    "webuild-repos": "webuildorg/webuild-repos.git",
+    "webuild-events": "webuildorg/webuild-events.git"
   },
   "devDependencies": {
     "blanket": "1.1.7",
-    "bower": "1.4.1",
+    "bower": "1.5.2",
     "chai": "3.2.0",
-    "coveralls": "2.11.3",
+    "coveralls": "2.11.4",
     "grunt": "0.4.5",
-    "grunt-bump": "0.3.1",
+    "grunt-bump": "0.5.0",
     "grunt-cli": "0.1.13",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-csslint": "0.5.0",
-    "grunt-contrib-jshint": "0.11.2",
+    "grunt-contrib-jshint": "0.11.3",
     "grunt-contrib-stylus": "0.22.0",
-    "grunt-contrib-uglify": "0.9.1",
+    "grunt-contrib-uglify": "0.9.2",
     "grunt-jsbeautifier": "0.2.10",
-    "grunt-jscs": "2.0.0",
-    "mocha": "2.2.5",
+    "grunt-jscs": "2.1.0",
+    "mocha": "2.3.0",
     "mocha-lcov-reporter": "0.0.2",
     "nconf": "0.7.2"
   },
