--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webuild.sg",
-  "version": "2.12.3",
+  "version": "2.13.0",
   "homepage": "http://webuild.sg",
   "keywords": "developer, designer, maker, engineer, open source, open events, open community",
   "private": true,
@@ -32,7 +32,7 @@
     "serve-favicon": "2.3.0",
     "sitemap": "1.1.0",
     "webuild-repos": "webuildorg/webuild-repos.git",
-    "webuild-events": "webuildorg/webuild-events.git"
+    "webuild-events": "webuildorg/webuild-events.git#remove-city-specific-data"
   },
   "devDependencies": {
     "blanket": "1.1.7",
