fix(package.json) change webuild-events dependency back to master

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "serve-favicon": "2.3.0",
     "sitemap": "1.1.0",
     "webuild-repos": "webuildorg/webuild-repos.git",
-    "webuild-events": "webuildorg/webuild-events.git#remove-city-specific-data"
+    "webuild-events": "webuildorg/webuild-events.git"
   },
   "devDependencies": {
     "blanket": "1.1.7",
