--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "request": "2.61.0",
     "serve-favicon": "2.3.0",
     "sitemap": "1.1.0",
-    "webuild-repos": "webuildorg/webuild-repos.git",
-    "webuild-events": "webuildorg/webuild-events.git"
+    "webuild-events": "1.1.0",
+    "webuild-repos": "webuildorg/webuild-repos.git"
   },
   "devDependencies": {
     "blanket": "1.1.7",
