--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -7,6 +7,9 @@ cd $OPENSHIFT_REPO_DIR
 # Cache npm components on main gear
 if [ "$OPENSHIFT_GEAR_UUID" == "$OPENSHIFT_APP_UUID" ]; then
   mkdir -p "$OPENSHIFT_DATA_DIR"node_modules
+  mkdir -p "$OPENSHIFT_DATA_DIR"bower_components
+
+  ln -s "$OPENSHIFT_DATA_DIR"bower_components bower_components
   ln -s "$OPENSHIFT_DATA_DIR"node_modules node_modules
 fi
 
@@ -14,3 +17,4 @@ npm install --loglevel error
 
 # Prune unused node node_modules
 npm prune
+bower install -q
