--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -13,10 +13,8 @@ if [ "$OPENSHIFT_GEAR_UUID" == "$OPENSHIFT_APP_UUID" ]; then
   ln -s "$OPENSHIFT_DATA_DIR"node_modules node_modules
 fi
 
-npm install --loglevel error
+# install npm dependencies
+npm install
 
 # Prune unused node node_modules
 npm prune
-
-# bower install
-bower install -q
