--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "routine": "grunt cleanup && npm outdated && bower list && npm-check-updates -u && npm i && grunt && npm test && npm outdated"
   },
   "dependencies": {
-    "body-parser": "1.13.3",
-    "bower": "1.5.2",
+    "body-parser": "1.14.0",
+    "bower": "1.5.3",
     "cli-color": "1.0.0",
     "compression": "1.5.2",
     "cors": "2.7.1",
@@ -23,24 +23,24 @@
     "grunt-contrib-uglify": "0.9.2",
     "grunt-jsbeautifier": "0.2.10",
     "ical": "0.4.0",
-    "ical-generator": "0.2.4-dev",
+    "ical-generator": "0.2.4",
     "jade": "1.11.0",
-    "jsonfile": "2.2.1",
+    "jsonfile": "2.2.2",
     "moment-timezone": "0.4.0",
     "promise": "7.0.4",
-    "request": "2.61.0",
+    "request": "2.64.0",
     "serve-favicon": "2.3.0",
-    "sitemap": "1.1.1",
-    "webuild-events": "1.1.0",
+    "sitemap": "1.3.0",
+    "webuild-events": "1.2.0",
     "webuild-repos": "1.0.0"
   },
   "devDependencies": {
     "blanket": "1.1.7",
-    "bower": "1.5.2",
-    "chai": "3.2.0",
+    "bower": "1.5.3",
+    "chai": "3.3.0",
     "coveralls": "2.11.4",
     "grunt": "0.4.5",
-    "grunt-bump": "0.5.0",
+    "grunt-bump": "0.6.0",
     "grunt-cli": "0.1.13",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-csslint": "0.5.0",
@@ -49,9 +49,9 @@
     "grunt-contrib-uglify": "0.9.2",
     "grunt-jsbeautifier": "0.2.10",
     "grunt-jscs": "2.1.0",
-    "mocha": "2.3.2",
-    "mocha-lcov-reporter": "0.0.2",
-    "nconf": "0.7.2"
+    "mocha": "2.3.3",
+    "mocha-lcov-reporter": "1.0.0",
+    "nconf": "0.8.0"
   },
   "engines": {
     "iojs": "2.2.x"
