--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "grunt travis --verbose && mocha test --recursive",
     "postinstall": "bower install && grunt build",
     "routine": "grunt cleanup && npm outdated && bower list && npm-check-updates -u && npm i && grunt && npm test && npm outdated",
-    "cov": "mocha test --recursive --require blanket --reporter html-cov > coverage.html"
+    "cov": "mocha test --recursive --require blanket --reporter html-cov > coverage.html",
+    "staging": "git push staging-rhc master && rhc app-force-stop --app staging && rhc deploy master --app staging",
+    "production": "git push production-rhc master && rhc app-force-stop --app production && rhc deploy master --app production"
   },
   "dependencies": {
     "body-parser": "1.14.1",
