--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "promise": "7.1.1",
     "request": "2.69.0",
     "sitemap": "1.5.0",
-    "webuild-events": "1.4.7",
-    "webuild-repos": "1.4.1"
+    "webuild-events": "^1.4.0",
+    "webuild-repos": "^1.4.0"
   },
   "devDependencies": {
     "blanket": "1.1.7",
