--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jade": "1.11.0",
     "jsonfile": "2.2.3",
     "moment-timezone": "0.5.0",
+    "morgan": "^1.7.0",
     "promise": "7.1.1",
     "request": "2.69.0",
     "sitemap": "1.5.0",
