--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "promise": "7.1.1",
     "request": "2.69.0",
     "sitemap": "1.5.0",
+    "tracer": "^0.8.3",
     "webuild-events": "1.4.11",
     "webuild-repos": "^1.4.0"
   },
