feat: integrate firebase. #216

--- a/.env-example
+++ b/.env-example
@@ -11,3 +11,7 @@ WEBUILD_AUTH0_CLIENT_ID=secret
 WEBUILD_AUTH0_CLIENT_SECRET=secret
 NODE_ENV=staging
 BOT_TOKEN=secret
+FIREBASE_EMAIL=secret
+FIREBASE_PASSWORD=secret
+FIREBASE_UID=secret
+FIREBASE_URL=secret
