--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "2.7.1",
     "errorhandler": "1.4.3",
     "express": "4.13.4",
+    "firebase": "^2.4.2",
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
     "grunt-contrib-uglify": "1.0.0",
