--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
   "scripts": {
     "start": "node app",
     "build": "grunt",
+
     "logs:staging": "rhc tail -o '-n 100' -a staging",
     "logs:production": "rhc tail -o '-n 100' -a production",
+
     "test": "standard archives/*.js countdown/*.js lib/*.js app.js && grunt travis --verbose",
     "postinstall": "bower install && grunt build",
+
+    "restart:staging": "rhc app-restart --app staging",
+    "restart:production": "rhc app-restart --app production",
+    "restart": "npm run restart:staging && npm run restart:production",
+
     "routine": "grunt cleanup && npm outdated && bower list && npm-check-updates -u && npm i && grunt && npm test && npm outdated",
     "cov": "mocha test --recursive --require blanket --reporter html-cov > coverage.html",
+
     "deploy:staging": "git push staging-rhc master && rhc app-force-stop --app staging && rhc deploy master --app staging",
     "deploy:production": "git push production-rhc master && rhc app-force-stop --app production && rhc deploy master --app production",
     "deploy": "npm run deploy:staging && npm run deploy:production"
