--- a/.env.sample
+++ b/.env.sample
@@ -1,17 +1,21 @@
+BOT_TOKEN=secret
 WEBUILD_API_SECRET=secret
 MEETUP_API_KEY=secret
 PORT=4000
 LOCATION=Singapore
 MAX_USERS=1000
-MAX_REPOS=10
+MAX_REPOS=1000
 GITHUB_CLIENT_ID=secret
 GITHUB_CLIENT_SECRET=secret
 EVENTBRITE_TOKEN=secret
 WEBUILD_AUTH0_CLIENT_ID=secret
 WEBUILD_AUTH0_CLIENT_SECRET=secret
-NODE_ENV=staging
+WEBUILD_URL=https://production-webuildsg.rhcloud.com
+NODE_ENV=production
 BOT_TOKEN=secret
-FIREBASE_EMAIL=secret
-FIREBASE_PASSWORD=secret
+FIREBASE_EMAIL=webuildsg@gmail.com
 FIREBASE_UID=secret
-FIREBASE_URL=secret
+FIREBASE_URL=https://webuildsg.firebaseio.com
+FIREBASE_PASSWORD=secret
+FIREBASE_IV=secret
+TZ=Asia/Singapore
