feat: add update groups button. #242

--- a/.jshintrc
+++ b/.jshintrc
@@ -36,6 +36,7 @@
     "describe": true,
     "document": true,
     "exports": true,
+    "fetch": true,
     "fluidvids": true,
     "it": true,
     "module": true,
