--- a/package.json
+++ b/package.json
@@ -27,32 +27,32 @@
     "cors": "2.7.1",
     "errorhandler": "1.4.3",
     "express": "4.14.0",
-    "firebase": "^3.0.3",
+    "firebase": "3.2.0",
     "ical": "0.5.0",
     "ical-generator": "0.2.7",
     "jsonfile": "2.3.1",
     "moment-timezone": "0.5.4",
     "morgan": "^1.7.0",
     "promise": "7.1.1",
-    "pug": "^2.0.0-alpha8",
-    "request": "2.72.0",
+    "pug": "2.0.0-beta4",
+    "request": "2.73.0",
     "standard": "7.1.2",
     "tracer": "^0.8.3",
-    "webuild-events": "1.4.29",
+    "webuild-events": "1.4.30",
     "webuild-repos": "^1.4.1"
   },
   "devDependencies": {
     "blanket": "1.2.3",
     "bower": "1.7.9",
     "chai": "3.5.0",
-    "coveralls": "2.11.9",
+    "coveralls": "2.11.11",
     "grunt": "1.0.1",
     "grunt-bump": "0.8.0",
     "grunt-cli": "1.2.0",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-csslint": "1.0.0",
     "grunt-contrib-jshint": "1.0.0",
-    "grunt-contrib-uglify": "1.0.1",
+    "grunt-contrib-uglify": "2.0.0",
     "grunt-jsbeautifier": "0.2.13",
     "grunt-jscs": "3.0.1",
     "mocha": "2.5.3",
