docs: add admin username and password to env sample

--- a/.env.sample
+++ b/.env.sample
@@ -19,3 +19,5 @@ FIREBASE_URL=https://webuildsg.firebaseio.com
 FIREBASE_PASSWORD=secret
 FIREBASE_IV=secret
 TZ=Asia/Singapore
+ADMIN_USERNAME=secret
+ADMIN_PASSWORD=secret
