add fetch library in bower. close #259

--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "auth0-lock": "10.0.0",
     "fluidvids": "2.4.1",
     "moment": "2.13.0",
-    "d3": "3.5.17"
+    "d3": "3.5.17",
+    "fetch": "^1.0.0"
   }
 }
