add all missing config

--- a/.env.sample
+++ b/.env.sample
@@ -1,23 +1,26 @@
+ADMIN_PASSWORD=secret
+ADMIN_USERNAME=admin
 BOT_TOKEN=secret
-WEBUILD_API_SECRET=secret
-MEETUP_API_KEY=secret
-PORT=4000
-LOCATION=Singapore
-MAX_USERS=1000
-MAX_REPOS=1000
+EVENTBRITE_TOKEN=secret
+FIREBASE_CLIENT_ID=secret
+FIREBASE_EMAIL=secret@gmail.com
+FIREBASE_IV=secret
+FIREBASE_PASSWORD=secret
+FIREBASE_PRIVATE_KEY_ID=secret
+FIREBASE_PROJECT_ID=project-secret
+FIREBASE_UID=secret
+FIREBASE_URL=https://secret.firebaseio.com
 GITHUB_CLIENT_ID=secret
 GITHUB_CLIENT_SECRET=secret
-EVENTBRITE_TOKEN=secret
+LOCATION=Singapore
+MAX_REPOS=1000
+MAX_USERS=1000
+MEETUP_API_KEY=secret
+NODE_ENV=production
+PORT=4000
+TZ=Asia/Singapore
+WEBUILD_API_SECRET=secret
 WEBUILD_AUTH0_CLIENT_ID=secret
 WEBUILD_AUTH0_CLIENT_SECRET=secret
-WEBUILD_URL=https://production-webuildsg.rhcloud.com
-NODE_ENV=production
-BOT_TOKEN=secret
-FIREBASE_EMAIL=webuildsg@gmail.com
-FIREBASE_UID=secret
-FIREBASE_URL=https://webuildsg.firebaseio.com
-FIREBASE_PASSWORD=secret
-FIREBASE_IV=secret
-TZ=Asia/Singapore
-ADMIN_USERNAME=secret
-ADMIN_PASSWORD=secret
+WEBUILD_AUTH0_CLIENT_TOKEN=secret.eyJhdWQiOiJHaVBLVlAwUkdIYndBOEU1UVdyZU1JZ20wSGg1U
+WEBUILD_URL=https://secret.rhcloud.com
