fix #284, removed unused deps, moved standard to devDeps and added --fix to standard

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "grunt",
     "logs:staging": "rhc tail -o '-n 100' -a staging",
     "logs:production": "rhc tail -o '-n 100' -a production",
-    "test": "standard archives/*.js countdown/*.js lib/*.js app.js && grunt travis --verbose",
+    "test": "standard --fix archives/*.js countdown/*.js lib/*.js app.js && grunt travis --verbose",
     "restart:staging": "rhc app-restart --app staging",
     "restart:production": "rhc app-restart --app production",
     "restart": "npm run restart:staging && npm run restart:production",
@@ -27,7 +27,7 @@
     "cors": "2.8.1",
     "errorhandler": "1.5.0",
     "express": "5.0.0-alpha.5",
-    "firebase": "3.6.7",
+    "firebase-admin": "^4.1.3",
     "ical-generator": "0.2.9",
     "jsonfile": "2.4.0",
     "moment-timezone": "0.5.11",
@@ -35,12 +35,12 @@
     "promise": "7.1.1",
     "pug": "2.0.0-beta9",
     "request": "2.81.0",
-    "standard": "8.6.0",
     "tracer": "^0.8.3",
     "webuild-events": "1.4.37",
     "webuild-repos": "1.4.4"
   },
   "devDependencies": {
+    "standard": "8.6.0",
     "blanket": "1.2.3",
     "bower": "1.8.0",
     "chai": "3.5.0",
