--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "start": "node app",
+    "debug": "node --inspect-brk app",
     "build": "grunt",
     "logs:staging": "rhc tail -o '-n 100' -a staging",
     "logs:production": "rhc tail -o '-n 100' -a production",
@@ -20,43 +21,43 @@
     "deploy": "npm run deploy:staging && npm run deploy:production"
   },
   "dependencies": {
-    "basic-auth": "^1.0.4",
-    "body-parser": "1.17.1",
+    "basic-auth": "^2.0.0",
+    "body-parser": "1.18.2",
     "cli-color": "1.2.0",
-    "compression": "1.6.2",
-    "cors": "2.8.3",
+    "compression": "1.7.1",
+    "cors": "2.8.4",
     "errorhandler": "1.5.0",
     "express": "5.0.0-alpha.5",
-    "firebase-admin": "^4.1.3",
-    "ical-generator": "0.2.9",
-    "jsonfile": "2.4.0",
+    "firebase-admin": "^5.3.0",
+    "ical-generator": "0.2.10",
+    "jsonfile": "4.0.0",
     "moment-timezone": "0.5.13",
-    "morgan": "^1.7.0",
-    "promise": "7.1.1",
-    "pug": "2.0.0-beta11",
-    "request": "2.81.0",
-    "tracer": "^0.8.3",
+    "morgan": "^1.9.0",
+    "promise": "8.0.1",
+    "pug": "2.0.0-rc.4",
+    "request": "2.83.0",
+    "tracer": "^0.8.11",
     "webuild-events": "1.4.38",
     "webuild-repos": "1.4.5"
   },
   "devDependencies": {
-    "standard": "10.0.2",
+    "standard": "10.0.3",
     "blanket": "1.2.3",
-    "bower": "1.8.0",
-    "chai": "3.5.0",
-    "coveralls": "2.13.0",
+    "bower": "1.8.2",
+    "chai": "4.1.2",
+    "coveralls": "3.0.0",
     "grunt": "1.0.1",
     "grunt-bump": "0.8.0",
     "grunt-cli": "1.2.0",
     "grunt-contrib-clean": "1.1.0",
     "grunt-contrib-csslint": "2.0.0",
     "grunt-contrib-jshint": "1.1.0",
-    "grunt-contrib-uglify": "2.3.0",
+    "grunt-contrib-uglify": "3.1.0",
     "grunt-jsbeautifier": "0.2.13",
     "grunt-jscs": "3.0.1",
-    "mocha": "3.2.0",
+    "mocha": "3.5.3",
     "mocha-lcov-reporter": "1.3.0",
-    "nconf": "0.8.4"
+    "nconf": "0.8.5"
   },
   "engines": {
     "node": "4.3.x"
