--- a/package.json
+++ b/package.json
@@ -22,31 +22,31 @@
   },
   "dependencies": {
     "basic-auth": "^2.0.0",
-    "body-parser": "1.18.2",
+    "body-parser": "1.18.3",
     "cli-color": "1.2.0",
-    "compression": "1.7.1",
+    "compression": "1.7.3",
     "cors": "2.8.4",
     "errorhandler": "1.5.0",
-    "express": "5.0.0-alpha.5",
-    "firebase-admin": "^5.4.2",
-    "ical-generator": "0.2.10",
+    "express": "^5.0.0-alpha.6",
+    "firebase-admin": "^5.13.0",
+    "ical-generator": "1.0.2",
     "jsonfile": "4.0.0",
-    "moment-timezone": "0.5.14",
+    "moment-timezone": "0.5.21",
     "morgan": "^1.9.0",
     "promise": "8.0.1",
-    "pug": "2.0.0-rc.4",
-    "request": "2.83.0",
-    "tracer": "^0.8.11",
+    "pug": "2.0.3",
+    "request": "2.87.0",
+    "tracer": "^0.9.1",
     "webuild-events": "1.4.39",
     "webuild-repos": "1.4.5"
   },
   "devDependencies": {
-    "standard": "10.0.3",
+    "standard": "11.0.1",
     "blanket": "1.2.3",
-    "bower": "1.8.2",
+    "bower": "1.8.4",
     "chai": "4.1.2",
-    "coveralls": "3.0.0",
-    "grunt": "1.0.1",
+    "coveralls": "3.0.2",
+    "grunt": "1.0.3",
     "grunt-bump": "0.8.0",
     "grunt-cli": "1.2.0",
     "grunt-contrib-clean": "1.1.0",
@@ -55,7 +55,7 @@
     "grunt-contrib-uglify": "3.3.0",
     "grunt-jsbeautifier": "0.2.13",
     "grunt-jscs": "3.0.1",
-    "mocha": "4.0.1",
+    "mocha": "5.2.0",
     "mocha-lcov-reporter": "1.3.0",
     "nconf": "0.10.0"
   },
